experimenting with flattening fhir resources for storage

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ langchain/docs/*
 langchain/pdf_data/*
 langchain/latex_docs/*
 agents/build_and_eval_data_agents/lessons/*
+agents/build_and_eval_data_agents/fhir/*
