trying out more sql queries

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ agents/agentic_ai_intro/M4_assignment/*
 agents/agentic_ai_intro/M5_assignment/*
 agents/agentic_ai_intro/research_agent/*
 fhir/*
+sql/*.db
 *.pyc
